ownership check added with moderator and admin
